--- a/404.md
+++ b/404.md
@@ -1,3 +1,7 @@
 ---
 permalink: /404.html
 ---
+<script src="redirect.js"></script>
+<script>
+redirectToPage(window.location.replace("vvasuki.github.io", "vishvAsa.github.io"));
+</script>
