--- a/404.md
+++ b/404.md
@@ -3,5 +3,5 @@ permalink: /404.html
 ---
 <script src="redirect.js"></script>
 <script>
-redirectToPage(window.location.replace("vvasuki.github.io", "vishvAsa.github.io"));
+redirectToPage(window.location.href.replace("vvasuki.github.io", "vishvAsa.github.io"));
 </script>
