--- a/404.md
+++ b/404.md
@@ -1,7 +1,9 @@
 ---
 permalink: /404.html
 ---
+<div name="manualRedirectionDiv"/>
+
 <script src="redirect.js"></script>
 <script>
-redirectToPage(window.location.href.replace("vvasuki.github.io", "vishvAsa.github.io"));
+redirectToPage(window.location.href.replace("vvasuki.github.io", "vishvAsa.github.io"), document.getElementsByName("manualRedirectionDiv"), true);
 </script>
