--- a/404.md
+++ b/404.md
@@ -5,5 +5,5 @@ permalink: /404.html
 
 <script src="redirect.js"></script>
 <script>
-redirectToPage(window.location.href.replace("vvasuki.github.io", "vishvAsa.github.io"), document.getElementsByName("manualRedirectionDiv"), true);
+redirectToPage(window.location.href.replace("vvasuki.github.io", "vishvAsa.github.io"), document.getElementsByName("manualRedirectionDiv"), false);
 </script>
